# RigorLoop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  PACKAGING_PLAN.md  PLAN.md  README.md  SECURITY.md  justfile  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/contact-cards/: examples.jsonl  rigorloop.toml  task.md
scripts/: live-smoke.sh
src/rigorloop/: __init__.py
src/rigorloop/core/: __init__.py  config_calcs.py  dataset_calcs.py  prompt_calcs.py  report_calcs.py  scoring_calcs.py  strategy_calcs.py  types.py
src/rigorloop/shell/: __init__.py  agent_calls.py  cli.py  io_actions.py
stale_markdowns/: CLAUDE.md  PACKAGING_PLAN.md  POTENTIAL_PROBLEM.md
tests/: conftest.py  test_agent_calls.py  test_cli.py  test_config_calcs.py  test_dataset_calcs.py  test_e2e.py  test_io_actions.py  test_leakage.py  test_prompt_calcs.py  test_report_calcs.py  test_scoring_calcs.py  test_strategy_calcs.py
