[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rigorloop"
dynamic = ["version"]
description = "Statistically-sound agentic build framework: dev/val/test-split loops that produce code artifacts without overfitting."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Roni Kobrosly", email = "roni.kobrosly@gmail.com" }]
requires-python = ">=3.12"
dependencies = []                    # stdlib-only, by design
keywords = ["agents", "llm", "evaluation", "claude", "data-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ronikobrosly/RigorLoop"
Issues = "https://github.com/ronikobrosly/RigorLoop/issues"
Changelog = "https://github.com/ronikobrosly/RigorLoop/blob/main/CHANGELOG.md"

[project.scripts]
rigorloop = "rigorloop.shell.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/rigorloop/_version.py"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "mypy>=1.16",
  "ruff>=0.8",
  "pre-commit>=4",
]

# ---- tool configuration ----

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
# Printing is a shell effect: forbidden in the core, expected in the shell.
"src/rigorloop/shell/**" = ["T20"]

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = ["exhaustive-match", "ignore-without-code"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast pure-core tests",
  "integration: shell tests against stubs",
  "e2e: full-run tests with fake agents",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["rigorloop"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "assert_never\\(",
]
